--- a/ssh/config
+++ b/ssh/config
@@ -12,3 +12,7 @@ Host ecelinux
   IdentityFile ~/.ssh/id_rsa
   User pwrobel
   ProxyCommand ssh -q school nc -q0 ecelinux.uwaterloo.ca 22
+
+Host server
+  HostName patrickwrobel.ca
+  User patrick
