Changed email to craptik@gmail.com in .gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = Patrick Wrobel
-  email = pwrobel@uwaterloo.ca
+  email = craptik@gmail.com
 [alias]
   st = status
   co = checkout
